# production-rag-platform

./: .gitignore  LICENSE  README.md  constraints-dev.txt  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  embedder.py  main.py
deploy/: Dockerfile  docker-compose.yml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: deployment.yaml  ingress.yaml  secret.yaml
docs/: ci-cd-pipeline.yml
docs/decisions/: 001-faiss-over-managed-vector-db.md  002-pre-grounding-over-post-filtering.md  003-circuit-breaker-for-llm-resilience.md  004-vendor-neutral-llm-protocol.md
evals/: __init__.py  __main__.py  harness.py
tests/: test_app.py  test_eval.py
