[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "production-rag-platform"
version = "1.0.0"
description = "Deployable reference RAG service built on the rag-llm-infra package: typed config, structured logging, Prometheus metrics, health/readiness probes, and an index/query API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Marwa Ben Salem" }]
dependencies = [
  "rag-llm-infra>=0.1.1",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "prometheus-client>=0.20",
  "pydantic-settings>=2.0",
]

[project.optional-dependencies]
# Non-default backends. The base install ships only the NumPy store + Mock LLM;
# these extras pull the matching flavor of rag-llm-infra so the advertised
# `APP_LLM_BACKEND=openai` / `APP_VECTOR_BACKEND=faiss|qdrant` modes are actually
# installable (`pip install production-rag-platform[openai]`). app.main fails
# fast at startup if a selected backend's package is missing.
openai = ["rag-llm-infra[openai]>=0.1.1"]
faiss = ["rag-llm-infra[faiss]>=0.1.1"]
qdrant = ["rag-llm-infra[qdrant]>=0.1.1"]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.6", "mypy>=1.11"]

[project.urls]
Homepage = "https://github.com/MarwaBS/production-rag-platform"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F841"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

# rag-llm-infra ships no py.typed marker yet, so mypy can't see its types.
# Scope the missing-imports allowance to that package only — everything else
# stays strictly checked.
[[tool.mypy.overrides]]
module = ["rag_llm_infra.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
